minitrace-macro/tests/ui/err/has-expr-argument.stderr
error: expected string literal
 --> tests/ui/err/has-expr-argument.rs:3:9
  |
3 | #[trace(true)]
  |         ^^^^
